--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@ header{
         line-height: 1.9;
         margin-bottom: 40px;
         text-align: left;
+        padding-right: 25% ;
     }
 
 
@@ -238,6 +239,8 @@ header{
         
         
         .hero-text p{
+            text-align: left;
+            padding-right: 25% ;
             font-size: 80%;
             
         }
